feat: 实现真正的下载功能（安装文件仍是fake的，但可以下载到）

--- a/web/index.html
+++ b/web/index.html
@@ -131,19 +131,19 @@
                     <div class="os-icon">🪟</div>
                     <h3 data-i18n="download.windows">Windows</h3>
                     <p data-i18n="download.windowsDesc">Windows 10/11 (64-bit)</p>
-                    <button class="btn btn-primary" data-i18n="download.download">Download</button>
+                    <a href="downloads/windows/PaperTalk-Setup-1.0.0.exe" class="btn btn-primary" data-i18n="download.download" download>Download</a>
                 </div>
                 <div class="download-card">
                     <div class="os-icon">🍎</div>
                     <h3 data-i18n="download.macos">macOS</h3>
                     <p data-i18n="download.macosDesc">macOS 10.15+ (64-bit)</p>
-                    <button class="btn btn-primary" data-i18n="download.download">Download</button>
+                    <a href="downloads/macos/PaperTalk-1.0.0.dmg" class="btn btn-primary" data-i18n="download.download" download>Download</a>
                 </div>
                 <div class="download-card">
                     <div class="os-icon">🐧</div>
                     <h3 data-i18n="download.linux">Linux</h3>
                     <p data-i18n="download.linuxDesc">Ubuntu 18.04+ (64-bit)</p>
-                    <button class="btn btn-primary" data-i18n="download.download">Download</button>
+                    <a href="downloads/linux/PaperTalk-1.0.0.AppImage" class="btn btn-primary" data-i18n="download.download" download>Download</a>
                 </div>
             </div>
             <div class="system-requirements">
