fix win平台安装包 下载链接问题

--- a/web/index.html
+++ b/web/index.html
@@ -131,7 +131,7 @@
                     <div class="os-icon">🪟</div>
                     <h3 data-i18n="download.windows">Windows</h3>
                     <p data-i18n="download.windowsDesc">Windows 10/11 (64-bit)</p>
-                    <a href="downloads/windows/PaperTalk-Setup-1.0.0.exe" class="btn btn-primary" data-i18n="download.download" download>Download</a>
+                    <a href="downloads/windows/PaperTalk_0.1.0_x64_en-US.msi" class="btn btn-primary" data-i18n="download.download" download>Download</a>
                 </div>
                 <div class="download-card">
                     <div class="os-icon">🍎</div>
