Linux安装包下载链接

--- a/web/index.html
+++ b/web/index.html
@@ -143,7 +143,7 @@
                     <div class="os-icon">🐧</div>
                     <h3 data-i18n="download.linux">Linux</h3>
                     <p data-i18n="download.linuxDesc">Ubuntu 18.04+ (64-bit)</p>
-                    <a href="downloads/linux/PaperTalk-1.0.0.AppImage" class="btn btn-primary" data-i18n="download.download" download>Download</a>
+                    <a href="downloads/linux/PaperTalk_0.1.0_amd64.deb" class="btn btn-primary" data-i18n="download.download" download>Download</a>
                 </div>
             </div>
             <div class="system-requirements">
