添加macOS安装包的下载链接

--- a/web/index.html
+++ b/web/index.html
@@ -137,7 +137,7 @@
                     <div class="os-icon">🍎</div>
                     <h3 data-i18n="download.macos">macOS</h3>
                     <p data-i18n="download.macosDesc">macOS 10.15+ (64-bit)</p>
-                    <a href="downloads/macos/PaperTalk-1.0.0.dmg" class="btn btn-primary" data-i18n="download.download" download>Download</a>
+                    <a href="downloads/macos/PaperTalk_0.1.0_aarch64_darwin.dmg" class="btn btn-primary" data-i18n="download.download" download>Download</a>
                 </div>
                 <div class="download-card">
                     <div class="os-icon">🐧</div>
